# semantic-proprioception

./: .envrc  .gitignore  CLAUDE.md  Cargo.toml  krapivin_index.proto  semantic_proprioception_demo.py  streamlit_app.py  umap_3d_data_MPNet-base.parquet  umap_3d_data_MiniLM-L12.parquet  umap_3d_data_MiniLM-L3.parquet  umap_3d_data_MiniLM-L6.parquet
arxiv_demo_data/: MPNet-base_embeddings.parquet  MPNet-base_lsh_index.parquet  MiniLM-L12_embeddings.parquet  MiniLM-L12_lsh_index.parquet  MiniLM-L3_embeddings.parquet  MiniLM-L3_lsh_index.parquet  MiniLM-L6_embeddings.parquet  MiniLM-L6_lsh_index.parquet  models_metadata.parquet
hackernews_demo_data/: MPNet-base_embeddings.parquet  MPNet-base_lsh_index.parquet  MiniLM-L12_embeddings.parquet  MiniLM-L12_lsh_index.parquet  MiniLM-L3_embeddings.parquet  MiniLM-L3_lsh_index.parquet  MiniLM-L6_embeddings.parquet  MiniLM-L6_lsh_index.parquet  models_metadata.parquet
krapivin-core/: Cargo.toml
krapivin-core/src/: hashtable.rs  lib.rs  merkle.rs  tag.rs  tests.rs
krapivin-lsh/: Cargo.toml  build.rs
krapivin-lsh/examples/: parquet_workflow.rs  serialization_demo.rs
krapivin-lsh/src/: file_ref.rs  index.rs  lib.rs  lsh.rs  parquet.rs  serialization.rs
krapivin-python/src/: lsh_bindings.rs
semantic_proprioception_data/: MPNet-base_embeddings.parquet  MPNet-base_lsh_index.parquet  MiniLM-L12_embeddings.parquet  MiniLM-L12_lsh_index.parquet  MiniLM-L3_embeddings.parquet  MiniLM-L3_lsh_index.parquet  MiniLM-L6_embeddings.parquet  MiniLM-L6_lsh_index.parquet  models_metadata.parquet
