[workspace]
members = [
    "krapivin-core",
    "krapivin-lsh",
    "krapivin-python",  # Keep existing Python bindings
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["J. Justin Donaldson <jdonaldson@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jdonaldson/semantic-proprioception"

[workspace.dependencies]
# Hash functions
xxhash-rust = { version = "0.8", features = ["xxh3"] }
blake3 = "1.5"  # For Merkle trees

# Serialization
prost = "0.13"  # Protobuf
bincode = "1.3"  # Fast binary serialization

# Data processing
polars = { version = "0.45", features = ["lazy", "parquet", "dtype-array"], default-features = false }

# Parallelism
rayon = "1.10"

# Testing
criterion = "0.5"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
