[package]
name = "krapivin-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
xxhash-rust = { workspace = true }
blake3 = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
