[package]
name = "krapivin-lsh"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
krapivin-core = { path = "../krapivin-core" }
prost = { workspace = true }
polars = { workspace = true }
rand = "0.8"
rand_chacha = "0.3"  # Deterministic RNG for fixed seed

[dev-dependencies]
tempfile = "3.0"

[build-dependencies]
prost-build = "0.13"
